skill: add Gradle track (§G) — open the door for Gradle bumps
Rung-1 verified on 021Skyfall/OpenAi_Example (pure Gradle, 11->17): the Maven
sweep cannot build it; Claude bumped it via Gradle — toolchain 11->17 -> gradlew
test rc=0, test conserved. Established + verified the full Gradle procedure
(gradlew baseline, toolchain set, wrapper bump for jv_to support, Lombok floors,
OpenRewrite via rewrite-gradle-plugin init-script [rewriteRun BUILD SUCCESSFUL],
gradlew test conserve) and folded it into SKILL.md as section G. Frontmatter/
title now say Maven or Gradle.

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>